--- a/templates/home.html
+++ b/templates/home.html
@@ -6,9 +6,9 @@
 <hr>
 	
 	{% if user.is_authenticated %}
-		<a href="{% url 'logout' %}">logout</a> | {{user.name}} you are logged in.
+		<a href="{% url 'account_logout' %}">logout</a> | {{user.email}} you are logged in.
 	{% else %}
-	<a href="{% url 'login' %}">login</a> | <a href="{% url 'signup' %}">signup</a>
+	<a href="{% url 'account_login' %}">login</a> | <a href="{% url 'account_signup' %}">signup</a>
 
 	{% endif %}
 		
